--- a/glowworm/glowworm.html
+++ b/glowworm/glowworm.html
@@ -20,7 +20,7 @@
 			#bg{
 				width: 100%;
 				height: 100%;
-				background: url(QQ图片20170412162109.jpg) no-repeat center center;
+				background: url(QQ20170412162109.jpg) no-repeat center center;
 				background-size: cover;
 			}
 		</style>
@@ -38,7 +38,7 @@
 			
 			for(var i = 0; i < num; i++){
 				var fireworm = new Object();
-				fireworm.element = $("<img src='QQ图片20170412155209.gif'/>");
+				fireworm.element = $("<img src='QQ20170412155209.gif'/>");
 				$("#bg").append(fireworm.element);
 				
 				fireworm.showPoint = function(){
